busyBox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: default
spec:
  containers:
  - image: busybox
    command: ["/bin/sh"]
    args: ["-c", "sleep 3600"]
    imagePullPolicy: IfNotPresent
    name: busybox
