dbBackend.yaml
# DB Pod
apiVersion: "v1"
kind: Pod
metadata:
  name: mysql
  labels:
    name: mysql
    app: demo
spec:
  containers:
    - name: mysql
      image: mysql:5
      ports:
        - containerPort: 3306
          protocol: TCP
---
# DB service
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    name: mysql
    app: demo
spec:
  ports:
    - port: 3306
      name: mysql
      targetPort: 3306
  selector:
    name: mysql
    app: demo
